--- a/example/styles/layout.css
+++ b/example/styles/layout.css
@@ -7,14 +7,14 @@ section, header, article, nav {
 }
 body {
 	margin: 1em auto;
-	background-image: url(images/318742-1406220I45283.jpg);
+	background-image: url(E:\我的创作\zhongcai\example\images\318742-1406220I45283.jpg);
 	background-attachment: fixed;
 	background-position: top left;
 	background-repeat: repeat-x;
-	max-width: 80em;
+	max-width: 82.5em;
 }
 header {
-	background-image: url(images/3-140P6153133.jpg);
+	background-image: url(E:\我的创作\zhongcai\example\images\3-140P6153133.jpg);
 	background-repeat: no-repeat;
 	background-position: bottom right;
 	border-width: 0.1em;
@@ -22,7 +22,7 @@ header {
 	border-bottom-width: 0;	
 }
 header nav {
-	background-image: url(images/34u58PICcWj_1024.jpg);
+	background-image: url(E:\我的创作\zhongcai\example\images\34u58PICcWj_1024.jpg);
 	background-position: bottom left;
 	background-repeat: repeat-x;
 	border-width: 0.1em;
